bug 5 resolvido adiocionando margin : 0 auto e text-align: center ao elemento table em index.css

--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -105,6 +105,8 @@ div:last-child {
 
 table {
     width: 60%;
+    margin: 0 auto;
+    text-align: center;
 }
 
 td button {
